# collu-bench_pipeline

./: .gitignore  README.md  paper.txt  pipeline.py  pyproject.toml  requirements.txt
artifacts/: racket_ground_truth_dataset_hybrid.jsonl  racket_pipeline_missing_gt_hybrid.json
configs/: example.yaml  racket_pipeline_hybrid.yaml
configs/data/: racket_from_humaneval_hybrid.jsonl  racket_pipeline_ready_hybrid.jsonl
scripts/: bootstrap_racket_benchmark.py  build_pipeline_ready_racket_dataset.py  build_racket_from_humaneval_hybrid.py  generate_racket_gt_from_dataset.py  generate_racket_gt_from_dataset_resume.py  run_racket_humaneval_tests.py
src/collu_bench/: __init__.py  canonical.py  config.py  data.py  execution.py  hallucination.py  llm.py  normalization.py  pipeline.py  prompt.py  python_to_racket_tests.py  racket_labeling.py  racket_normalization.py  storage.py  token_types.py  utils.py
